--- a/exercicios/ex026/mq002/estilos/paisagem.css
+++ b/exercicios/ex026/mq002/estilos/paisagem.css
@@ -4,7 +4,7 @@
 
 body {
     background: url(../imagens/cev-landscape.jpg);
-    background-position: left bottom;
+    background-position: center bottom;
     background-repeat: no-repeat;
     background-size: contain;
 }
