--- a/exercicios/ex026/mq004/estilos/media-query.css
+++ b/exercicios/ex026/mq004/estilos/media-query.css
@@ -13,9 +13,37 @@ Grandes telas: acima de 1200px
 
 @media print { /* IMPRESSÃO */
 
+    * {
+        font-family: 'Courier New', Courier, monospace;
+    }
+
+    body {
+        background-image: url(../imagens/back-print.jpg);
+    }
+
+    main h1 {
+        text-shadow: none;
+        color: black;
+    }
+
+    main {
+        width: 90vw;
+        border: 2px solid black;
+    }
+
+    main::after {
+        content: 'Essa impressão foi feita através do site wwww.cursoemvideo.com';
+        text-decoration: overline;
+    }
+
+    img#phone { display: none; }
+    img#tablet { display:  none; }
+    img#print { display: block; }
+    img#pc { display: none; }
+    img#tv { display: none; }
 }
 
-@media screen and (min-width: 768px) and (max-width:992px) { /* TABLET */
+@media screen and (min-width: 768px) and (max-width:1024px) { /* TABLET */
     body {
         background-image: url(../imagens/back-tablet.jpg);
     }
@@ -27,7 +55,7 @@ Grandes telas: acima de 1200px
     img#tv { display: none; }
 }
 
-@media screen and (min-width: 992px) and (max-width: 1199px) { /* DESKTOP */
+@media screen and (min-width: 1025px) and (max-width: 1920px) { /* DESKTOP */
     body {
         background-image: url(../imagens/back-pc.jpg);
     }
@@ -40,9 +68,13 @@ Grandes telas: acima de 1200px
 
 }
 
-@media screen and (min-width: 1200px) { /* TELAS GRANDES */
+@media screen and (min-width: 1921px) { /* TELAS GRANDES */
     body {
         background-image: url(../imagens/back-tv.jpg);
+    }
+
+    main {
+        width: 700px;
     }
 
     img#phone { display: none; }
